# nodo_gateway

./: Dockerfile  README.md  config.yaml  pyproject.toml
data/: gateway.db
src/gateway/: bridge.py  main.py  models.py  publisher.py
src/gateway/bluno/: bluno.py
src/gateway/commands/: at.py  diag.py  gps.py  health.py  pub.py  run.py
src/gateway/configuration/: config_loader.py  logging_loader.py  models.py
src/gateway/health/: health_thread.py
src/gateway/mqtt/: publisher.py
src/gateway/sqlite/: db.py  ingester.py
